# cy-gauge-app

./: .env.example  .gitignore  App.jsx  CONTRIBUTING.md  LICENSE  LICENSE.. md  Makefile  README.md  README_COMPLETE.md  docker-compose.yml  index.html  main.py  package.json  pyproject.toml  pytest.ini  requirements.txt  test_backend.py
. github/workflows/: backend.yml  frontend.yml
backend/: auth.py  main.py  middleware.py  requirements.txt  schemas.py
frontend/: Dockerfile
tests/: conftest.py
tests/# tests/: __init__.py
