[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "cy-gauge-app"
version = "1.0.0"
description = "Discrete Calabi–Yau Gauge Functor Dashboard — FastAPI backend"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Gaius Lumen", email = "gaiuslumen@gmail.com" }]
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "numpy==1.26.4",
    "scipy==1.13.0",
    "pydantic==2.7.1",
]

[project.optional-dependencies]
dev = [
    "black>=24.0",
    "ruff>=0.4",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "httpx>=0.27",   # ASGI test client used by TestClient
]

# ── Black ─────────────────────────────────────────────────────────────────────
[tool.black]
line-length = 88
target-version = ["py311"]

# ── Ruff ──────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]  # line length handled by black

# ── Pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"

# ── Coverage ──────────────────────────────────────────────────────────────────
[tool.coverage.run]
source  = ["main"]
omit    = ["tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
